--- a/src/components/Review.css
+++ b/src/components/Review.css
@@ -22,8 +22,9 @@ body {
 }
 
 .avatars {
-   border-radius: 10%;
+   border-radius: 50%;
   height: 100px;
+  width: 100px;
   margin-top: -6em;
 }
 
@@ -68,7 +69,7 @@ body {
 .arrow-container {
   display: flex;
   justify-content: space-between;
-  margin-top: -10em;
+  margin-top: -7em;
   position: relative;
 }
 
