--- a/src/components/navbar.css
+++ b/src/components/navbar.css
@@ -1,12 +1,20 @@
 nav {
-  position: sticky;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  padding: 10px;
+  z-index: 9999;
   display: flex;
   align-items: center;
   justify-content: space-between;
   background: #fbfcfb;
   padding: 20px 80px;
   box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
+  padding-left: 150px;
+  padding-right: 150px;
 }
+
 .logo {
   margin: 0px;
   padding: 0px;
@@ -93,8 +101,8 @@ nav {
     width: 300px;
     height: 100vh;
     background: #84888c;
-    background-color: rgba(0, 0, 0, 0.4);
-    box-shadow: 0 40px 60px rgba(0, 0, 0, 0.3);
+    background-color: rgb(239, 235, 235);
+    box-shadow: 0 40px 60px rgba(0, 0, 0, 0.1);
     padding: 40px 0 0 10px;
     transition: 0.3s ease-in-out;
   }
