--- a/src/components/aboutus.css
+++ b/src/components/aboutus.css
@@ -3,3 +3,19 @@
     padding: 0;
     box-sizing: border-box;
   }
+  .join-revolution {
+    background-color: black;
+
+    text-align: center;
+    padding: 20px;
+  }
+  
+  .join-revolution h3 {
+    color: white;
+    font-size: 24px;
+    font-weight: bold;
+    text-decoration: underline;
+    text-decoration-color: white;
+    text-decoration-style: dotted;
+  }
+  
