--- a/src/components/sports.css
+++ b/src/components/sports.css
@@ -66,6 +66,9 @@ body {
   .news1 img , .news2 img{
     height: 255px;
     border-radius: 5px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
   }
 
   
