--- a/src/components/sports.css
+++ b/src/components/sports.css
@@ -51,7 +51,10 @@ body {
   
   .right-side {
     width: 70%;
-
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
   }
 
   .news1, .news2 {
