--- a/src/components/sports.css
+++ b/src/components/sports.css
@@ -64,6 +64,10 @@ body {
 
   .news1 p, .news2 p {
     padding-top: 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
   }
 
   .news1 img , .news2 img{
