--- a/src/components/Store/Main.css
+++ b/src/components/Store/Main.css
@@ -79,6 +79,70 @@
     
   }
 
+.product-popup {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.7);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 9999;
+}
+
+.popup-content {
+  background-color: #fff;
+  padding: 20px;
+  max-width: 400px; /* Adjust the maximum width as needed */
+  width: 100%;
+  border-radius: 8px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+.popup-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 10px;
+}
+
+.close-btn {
+  background: none;
+  border: none;
+  cursor: pointer;
+  color: #666;
+  font-size: 16px;
+}
+
+.close-btn:hover {
+  color: rgb(10, 84, 10);
+}
+
+/* Styles for the image inside the popup */
+.popup-body img {
+  width: 100%; /* Adjust the width to resize the image */
+  height: auto; /* Maintain the aspect ratio */
+  max-height: 300px; /* Adjust the maximum height if needed */
+}
+
+/* Dropdown/Select styles */
+select {
+  width: 100%;
+  padding: 10px;
+  font-size: 16px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  margin-bottom: 10px;
+}
+
+label {
+  font-size: 16px;
+  font-weight: bold;
+}
+
+
   /* Responsive styles for medium-sized devices (tablets, small laptops) */
   @media (max-width: 768px) {
     .product-grid {
